--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/svg+xml" href="<%= BASE_URL %>favicon.svg">
         <link rel="icon" href="<%= BASE_URL %>favicon.ico">
         <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-<!--        <title>YoungManの工具箱</title>-->
+        <title>YoungManの工具箱</title>
     </head>
     <body>
         <div id="app"></div>
